# bot-discord

./: .gitignore  .replit  Dockerfile  bot.py  docker-compose.yml  executar.sh  pyproject.toml  raider.py  randomemoji.py  readme  requirements.txt  util.py  warcraftlogs.py
