[tool.poetry]
name = "Bot-Discord"
version = "0.1.0"
description = ""
authors = ["Murilo <murilobeluco@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
"discord.py" = "^1.4.1"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
opuslib = "^3.0.1"
requests = "^2.24.0"
psutil = "^5.7.2"
gTTS = "^2.1.1"
json-store-client = "^1.1.0"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
